# slurp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  final-plan.md  initial-research.md  pyproject.toml  research-synthesis.md  round1-synthesis.md
.github/workflows/: test.yml
docs/: 01-overview.md  02-architecture.md  03-cli.md  04-python-api.md  05-ssh-transport.md  06-state-management.md  07-job-submission.md  08-sync-and-logs.md  09-error-handling.md  10-multi-node.md  11-web-ui.md  12-testing.md  13-roadmap.md  14-risks.md  15-dependencies.md
examples/: 01_quickstart.py  02_sync_client_lifecycle.py  03_hyperparameter_sweep.py  04_dependency_pipeline.py  05_multi_node_distributed.py  06_error_handling.py  07_task_quickstart.py  08_task_distribute.py  09_task_batch_prediction.py  10_task_pipeline.py  README.md  progress.jsonl  train.py
src/slurp/: __init__.py  client.py  dispatcher.py  domain.py  errors.py  guard.py  node_setup.py  task.py  worker.py
src/slurp/cli/: cancel.py  config.py  logs.py  main.py  pull.py  setup.py  status.py  submit.py  sync.py  watch.py  webui.py
src/slurp/core/: launcher.py  slurm.py  ssh.py  store.py  sync.py
src/slurp/templates/profiles/: jureca.toml
src/slurp/webui/: __init__.py  app.py  routes.py  security.py  sse.py
src/slurp/webui/static/: dashboard.css  dashboard.js
src/slurp/webui/templates/: index.html
templates/: jureca.toml
tests/e2e/: test_jureca_smoke.py
tests/integration/: test_cli.py
tests/unit/: test_cli.py  test_client.py  test_dispatcher.py  test_domain.py  test_guard.py  test_node_setup.py  test_slurm.py  test_ssh.py  test_store.py  test_sync.py  test_task.py  test_webui.py  test_worker.py
