[project]
name = "slurp"
version = "0.1.0"
description = "A Python library and CLI for running ML jobs on SLURM clusters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "slurp contributors" },
]
keywords = ["slurm", "hpc", "cluster", "ml", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Clustering",
]

dependencies = [
    "asyncssh>=2.14",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "structlog>=24.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.0",
]
debug = ["debugpy"]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "pre-commit",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
slurp = "slurp.cli.main:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slurp"]

[tool.hatch.build.targets.wheel.sources]
"src/slurp" = "slurp"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Docker)",
    "e2e: marks tests as end-to-end tests (require real cluster)",
]
